[package]
name = "DragonBoyRust"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
